[package]
name = "devtimer"
version = "1.1.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2018"
readme = "README.md"
description = "A simple library that provides a simple way to time operations"
license = "Apache-2.0"
documentation = "https://docs.rs/devtimer"
repository = "https://github.com/sntdevco/devtimer"
categories = []
keywords = ["timer", "chrono", "development", "testing", "benchmark"]
[dependencies]