[package]
name = "devtimer"
version = "3.0.1"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2018"
readme = "README.md"
description = "A simple library for benchmarking code"
license = "Apache-2.0"
documentation = "https://docs.rs/devtimer"
repository = "https://github.com/ohsayan/devtimer"
categories = []
keywords = ["timer", "chrono", "development", "testing", "benchmark"]
[dependencies]